# predict_AAPL

./: .gitignore  README.md  hw_1.ipynb  pyproject.toml  requirements.txt
